# diet-python

./: #README.md#  .#README.md  .envrc  .gitignore  .gitmodules  AGENTS.md  CODEX_BUGS.txt  CODEX_TODO.md  CURRENT_FAILURES.txt  CURRENT_FAILURES_EXPLAINED.txt  CURRENT_FAILURES_HARD.txt  Cargo.toml  EXPECTED_FAILURE.md  FAILURE.md  FIXED_FAILURES.txt  Justfile  PLAN_SEMANTIC.md  README.md  REDESIGN.md  REDESIGN_v2.md  REDESIGN_v3.md  REDESIGN_v4.md  TODO.md  TODO_special.md  __dp__.py  cpython_failures_by_testcase.txt  cpython_full_test_run_summary.txt  diet_import_hook.py  dp_intrinsics.py  example.py  example_desugar.py  example_module.py  example_usage.py  fastadd.rs  lols.md  pyproject.toml  rust-toolchain.toml  sitecustomize.py  t.py  test_fix_summary.txt  (+6 more)
dp-transform/: Cargo.toml
dp-transform/src/: bb_ir.rs  body_transform.rs  driver.rs  ensure_import.rs  fixture.rs  lib.rs  min_ast.rs  namegen.rs  pass_tracker.rs  scope_aware_transformer.rs  side_by_side.rs  template.rs  test.rs  test_util.rs  transformer.rs  web_inspector.rs
dp-transform/src/basic_block/: annotation_export.rs  ast_symbol_analysis.rs  await_lower.rs  bb_ir.rs  block_py.rs  blockpy_pretty.rs  blockpy_string_lower.rs  bound_names.rs  cfg_ir.rs  cfg_trace.rs  codegen_normalize.rs  core_await_lower.rs  core_eval_order.rs  deleted_names.rs  driver.rs  expr_utils.rs  function_identity.rs  function_lowering.rs  lowered_ir.rs  mod.rs  param_specs.rs  render_py.rs  stmt_utils.rs  summarize_pass_shape.rs  web_inspector_support.rs
dp-transform/src/basic_block/ast_to_ast/: ast_rewrite.rs  body.rs  context.rs  mod.rs  rewrite_future_annotations.rs  rewrite_import.rs  rewrite_names.rs  scope.rs  simplify.rs
dp-transform/src/basic_block/ast_to_bb/: annotation_helpers.rs  await_lower.rs  bound_names.rs  dataflow.rs  deleted_names.rs  exception_flow.rs  exception_pass.rs  generator_closure.rs  lowering_helpers.rs  metadata.rs  mod.rs  naming.rs  pre_lower.rs  state_vars.rs  stmt_shape.rs  support.rs  symbol_analysis.rs  terminator_lowering.rs
dp-transform/src/basic_block/bb_passes/: codegen_normalize.rs  codegen_trace.rs  exception_pass.rs  mod.rs
dp-transform/src/basic_block/block_py/: cfg.rs  core_lower.rs  dataflow.rs  exception.rs  export.rs  mod.rs  param_specs.rs  pretty.rs  state.rs
dp-transform/src/basic_block/blockpy_expr_simplify/: mod.rs
dp-transform/src/basic_block/blockpy_generators/: mod.rs
dp-transform/src/basic_block/blockpy_to_bb/: codegen_normalize.rs  codegen_trace.rs  exception_pass.rs  mod.rs
dp-transform/src/basic_block/ruff_to_blockpy/: compat.rs  expr_lowering.rs  generator_lowering.rs  mod.rs  stmt_lowering.rs  stmt_sequences.rs  try_regions.rs
dp-transform/src/block_py/: cfg.rs  convert.rs  dataflow.rs  exception.rs  intrinsics.rs  mod.rs  name_gen.rs  operation.rs  param_specs.rs  pretty.rs  state.rs  test.rs  validate.rs
dp-transform/src/block_py/dataflow/: mod.rs  test.rs
dp-transform/src/block_py/param_specs/: mod.rs
dp-transform/src/block_py/pretty/: mod.rs  test.rs
dp-transform/src/passes/: annotation_export.rs  ast_symbol_analysis.rs  cfg_trace.rs  core_await_lower.rs  core_eval_order.rs  function_identity.rs  function_lowering.rs  mod.rs  name_binding.rs  summarize_pass_shape.rs  test.rs  trace.rs
dp-transform/src/passes/ast_symbol_analysis/: mod.rs  test.rs
dp-transform/src/template/: test.rs
dp-transform/src/transform/: Untitled  ast_rewrite.rs  context.rs  driver.rs  mod.rs  node_index.rs  rewrite_assign_del.rs  rewrite_decorator.rs  rewrite_explicit_scope.rs  rewrite_func_expr.rs  rewrite_function_def.rs  rewrite_function_def_call.rs  rewrite_future_annotations.rs  rewrite_import.rs  rewrite_match_case.rs  rewrite_names.rs  scope.rs  simplify.rs  snapshot_class.py  snapshot_class.txt  snapshot_expr.py  snapshot_expr.txt  snapshot_stmt.py  snapshot_stmt.txt  test_async_for_missing_aiter.txt  test_async_with_missing_aexit.txt  test_async_with_nonawaitable_aenter.txt  test_asyncio_taskgroup_base_error_refcycle.txt  test_class_annotations_deferred.txt  test_class_delayed_classcell.txt  test_class_global_classcell.txt  test_class_scope.txt  test_cleanup_dp_globals.txt  test_compare_in_while.txt  test_dataclasses_make_dataclass_invalid_field.txt  test_for_else_continue_minimal.txt  test_for_loop_no_else.txt  test_generator_exception_context.txt  test_generator_exception_context_integration.txt  test_lambda_qualname_minimal.txt  (+24 more)
dp-transform/tests/: scope_node_index.rs
py_stmt_match_macro/: Cargo.toml
py_stmt_match_macro/src/: lib.rs
py_stmt_match_macro/tests/: match_placeholders.rs
soac-blockpy/: Cargo.toml
soac-blockpy/src/: driver.rs  lib.rs  pass_tracker.rs  test.rs  test_util.rs  transformer.rs
soac-blockpy/src/block_py/: cfg.rs  convert.rs  exception.rs  map.rs  meta.rs  mod.rs  name_gen.rs  operation.rs  operation_macro.rs  scope.rs  semantics.rs  state.rs  structured.rs  test.rs  traverse.rs  validate.rs  visit.rs
soac-blockpy/src/passes/: counters.rs  instr_id.rs  instrument.rs  mod.rs  name_binding.rs  test.rs
soac-blockpy/src/template/: test.rs
soac-eval/: Cargo.toml  build.rs
soac-eval/src/: code_extra.rs  counter.rs  counter_dump.rs  jit.rs  lib.rs  module_constants.rs  module_globals.rs  module_type.rs  session.rs
soac-eval/src/jit/: exception_pass.rs  intrinsics.rs  mod.rs  planning.rs  specialized_helpers.rs  test.rs  vmctx.rs
soac-eval/src/tree_walk/: eval.rs  eval_genawait.rs  mod.rs  runtime.rs  scope.rs
soac-exec/: Cargo.toml  jit_importer.py  run_cpython_tests.sh
soac-exec/src/: c_api.rs  cranelift.rs  evaluate.rs  lib.rs  main.rs  module_instance.rs  module_symbols.rs  oython_ffi.rs  scope.rs
soac-exec/tests/: cli.rs  function_call.rs  module_symbols.rs  scope.rs  test_project_run.py
soac-exec/tests/test_project/: main.py
soac-inspector/: Cargo.toml  build.rs
soac-inspector/src/: counter_dump.rs  lib.rs  main.rs
soac-pyo3/: Cargo.toml  build.rs
soac-pyo3/src/: eval.rs  jit_runtime.rs  lib.rs  test.rs
soac_py/: pyproject.toml
soac_py/src/soac/: __init__.py  import_hook.py  runtime.py  sim.py
(+1056 files in other folders)
