[workspace]
members = ["dp-transform", "soac-pyo3", "soac-codegen", "soac-eval"]
default-members = ["dp-transform", "soac-pyo3", "soac-eval"]
# soac-runtime is standalone since its built to CLIF 
exclude = ["soac-runtime", "vendor/ruff"]
resolver = "2"

[workspace.dependencies]
pyo3 = { git = "https://github.com/PyO3/pyo3", branch = "main" }
pyo3-ffi = { git = "https://github.com/PyO3/pyo3", branch = "main" }
