[workspace]
members = ["dp-transform", "soac-pyo3", "soac-eval"]
default-members = ["dp-transform", "soac-pyo3", "soac-eval"]
# soac-runtime is standalone since its built to CLIF 
exclude = ["soac-runtime", "vendor/ruff"]
resolver = "2"

[workspace.dependencies]
pyo3 = { git = "https://github.com/PyO3/pyo3", branch = "main" }
pyo3-ffi = { git = "https://github.com/PyO3/pyo3", branch = "main" }

[profile.dev.package.cranelift-codegen]
opt-level = 3

[profile.dev.package.cranelift-control]
opt-level = 3

[profile.dev.package.cranelift-frontend]
opt-level = 3

[profile.dev.package.cranelift-jit]
opt-level = 3

[profile.dev.package.cranelift-module]
opt-level = 3

[profile.dev.package.regalloc2]
opt-level = 3
