[workspace]
members = ["soac-blockpy", "soac-pyo3", "soac-eval", "soac-inspector"]
default-members = ["soac-blockpy", "soac-pyo3", "soac-eval", "soac-inspector"]
# soac-runtime is standalone since its built to CLIF 
exclude = ["soac-runtime"]
resolver = "2"

[workspace.dependencies]
pyo3 = { git = "https://github.com/PyO3/pyo3", branch = "main" }
pyo3-ffi = { git = "https://github.com/PyO3/pyo3", branch = "main" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", rev = "2d16d8425179c3a235f8c57e72494728ff61a4f7" }
ruff_python_codegen = { git = "https://github.com/astral-sh/ruff", rev = "2d16d8425179c3a235f8c57e72494728ff61a4f7" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", rev = "2d16d8425179c3a235f8c57e72494728ff61a4f7" }
ruff_python_semantic = { git = "https://github.com/astral-sh/ruff", rev = "2d16d8425179c3a235f8c57e72494728ff61a4f7" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", rev = "2d16d8425179c3a235f8c57e72494728ff61a4f7" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", rev = "2d16d8425179c3a235f8c57e72494728ff61a4f7" }

[profile.dev.package.cranelift-codegen]
opt-level = 3

[profile.dev.package.cranelift-control]
opt-level = 3

[profile.dev.package.cranelift-frontend]
opt-level = 3

[profile.dev.package.cranelift-jit]
opt-level = 3

[profile.dev.package.cranelift-module]
opt-level = 3

[profile.dev.package.regalloc2]
opt-level = 3
