[package]
name = "dp-transform"
version = "0.1.0"
edition = "2021"

[lib]
name = "dp_transform"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ruff_python_parser = { path = "../vendor/ruff/crates/ruff_python_parser", package = "ruff_python_parser" }
ruff_python_ast = { path = "../vendor/ruff/crates/ruff_python_ast", package = "ruff_python_ast" }
ruff_python_codegen = { path = "../vendor/ruff/crates/ruff_python_codegen", package = "ruff_python_codegen" }
ruff_text_size = { path = "../vendor/ruff/crates/ruff_text_size", package = "ruff_text_size" }
ruff_source_file = { path = "../vendor/ruff/crates/ruff_source_file", package = "ruff_source_file" }
regex = "1"
serde_json = "1"
similar = "2"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
