[package]
name = "dp-transform"
version = "0.1.0"
edition = "2021"

[lib]
name = "dp_transform"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_parser" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_ast" }
ruff_python_codegen = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_codegen" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", package = "ruff_text_size" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", package = "ruff_source_file" }
regex = "1"
serde_json = "1"
similar = "2"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
