[package]
name = "soac-blockpy"
version = "0.1.0"
edition = "2021"

[lib]
name = "soac_blockpy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "regen_snapshots"
path = "src/bin/regen_snapshots/mod.rs"

[dependencies]
ruff_python_parser = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_python_codegen = { workspace = true }
ruff_python_semantic = { workspace = true }
ruff_text_size = { workspace = true }
ruff_source_file = { workspace = true }
regex = "1"
serde_json = "1"
similar = "2"
log = "0.4"
env_logger = "0.11"
anyhow = { version = "1.0.100", features = ["backtrace"] }
derive_more = { version = "2", features = ["from"] }
