[package]
name = "soac-eval"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
dp-transform = { path = "../dp-transform" }
ruff_python_ast = { path = "../vendor/ruff/crates/ruff_python_ast" }
pyo3 = { workspace = true, features = ["extension-module"] }
log = "0.4"
cranelift-codegen = { version = "0.125", features = ["incremental-cache"] }
cranelift-control = "0.125"
cranelift-frontend = "0.125"
cranelift-jit = "0.125"
cranelift-module = "0.125"
