[package]
name = "soac-eval"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
doctest = false

[dependencies]
soac-blockpy = { path = "../soac-blockpy" }
ruff_python_ast = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
log = "0.4"
cranelift-codegen = { version = "0.125", features = ["incremental-cache"] }
cranelift-control = "0.125"
cranelift-frontend = "0.125"
cranelift-jit = "0.125"
cranelift-module = "0.125"
cranelift-native = "0.125"
cranelift-reader = "0.125"
libc = "0.2"

[build-dependencies]
pyo3-build-config = { git = "https://github.com/PyO3/pyo3", branch = "main", features = ["resolve-config"] }
