[package]
name = "soac-exec"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cranelift = { version = "0.123.2", features = ["jit"] }
cranelift-jit = "0.123.2"
cranelift-module = "0.123.2"
pyo3 = { version = "0.21", features = ["auto-initialize"] }
libc = "0.2"
dp-transform = { path = "../dp-transform" }

[dev-dependencies]
assert_cmd = "2.0"
