[package]
name = "soac-pyo3"
version = "0.1.0"
edition = "2024"

[lib]
name = "diet_python"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
dp-transform = { path = "../dp-transform" }
soac-eval = { path = "../soac-eval" }
pyo3 = { workspace = true, features = ["extension-module"] }
log = "0.4"
