[package]
name = "soac-pyo3"
version = "0.1.0"
edition = "2024"

[lib]
name = "_soac_ext"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
soac-blockpy = { path = "../soac-blockpy" }
soac-eval = { path = "../soac-eval" }
pyo3 = { workspace = true, features = ["extension-module"] }
log = "0.4"
serde_json = "1"
